add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -60,6 +60,7 @@
 				counter += 1;
 				if (counter !== points) {
 					counter2 += 1;
+					counter -= 1;
 				}
 				if (counter2 >= 10){
 					clearInterval(interval);
