--- a/projects/platformer/index.html
+++ b/projects/platformer/index.html
@@ -15,6 +15,9 @@
         <script src="js/init/collectable.js"></script>
         <script src="js/init/cannon.js"></script>
         <script src="js/init/player.js"></script>
+        <link rel="shortcut icon" href="images/duck.ico">
+        <link rel="apple-touch-icon" href="images/duck.png">
+        <link rel="icon" sizes="192X192" href="images/duck.png">
     </head>
     <body>
         <script src="js/index.js"></script>
