add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             margin: 0px;
         }
     </style>
+        <link rel="shortcut icon" href="images/duck.ico">
+        <link rel="apple-touch-icon" href="images/duck.png">
+        <link rel="icon" sizes="192X192" href="images/duck.png">
     </head>
     
     <body>
