--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -26,7 +26,9 @@
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-
+	<link rel="shortcut icon" href="images/duck.ico">
+	<link rel="apple-touch-icon" href="images/duck.png">
+	<link rel="icon" sizes="192X192" href="images/duck.png">
 </head>
 <body class="board">
 	<div class = "miss">10 Misses is Game Over - Refresh</div>
