add portfolio.html file

--- a/projects/runtime/index.html
+++ b/projects/runtime/index.html
@@ -43,9 +43,9 @@
         <script src="js/level01.js"></script>
         
         <!--Load Additional Scripts Here-->
-        <link rel="shortcut icon" href="images/duck.ico">
-        <link rel="apple-touch-icon" href="images/duck.png">
-        <link rel="icon" sizes="192X192" href="images/duck.png">
+        <link rel="shortcut icon" href="img/duck.ico">
+        <link rel="apple-touch-icon" href="img/duck.png">
+        <link rel="icon" sizes="192X192" href="img/duck.png">
     </head>
     <body>
         <div id="main">
