add portfolio.html file

--- a/projects/circularity/index.html
+++ b/projects/circularity/index.html
@@ -25,9 +25,11 @@
         <style type="text/css">
             /*override default styles here*/
         </style>
-        <link rel="shortcut icon" href="images/duck.ico">
-        <link rel="apple-touch-icon" href="images/duck.png">
-        <link rel="icon" sizes="192X192" href="images/duck.png">
+        <link rel="shortcut icon" href="img/duck.ico">
+        <link rel="apple-touch-icon" href="img/duck.png">
+        <link rel="icon" sizes="192X192" href="imggit add .
+
+        /duck.png">
     </head>
     <body>
         <div>
