add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,9 @@
                 color: #454545;
             }
         </style>
+        <link rel="shortcut icon" href="img/duck.ico">
+        <link rel="apple-touch-icon" href="img/duck.png">
+        <link rel="icon" sizes="192X192" href="img/duck.png">
     </head>
 
     <body>
