add portfolio.html file

--- a/asd-projects/debugging-exercise/index.html
+++ b/asd-projects/debugging-exercise/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="index.js"></script>
+    <link rel="shortcut icon" href="img/duck.ico">
+    <link rel="apple-touch-icon" href="img/duck.png">
+    <link rel="icon" sizes="192X192" href="img/duck.png">
 </head>
 <body>
     <div id="board">
