--- a/asd-projects/walker/index.html
+++ b/asd-projects/walker/index.html
@@ -13,6 +13,7 @@
   <body>
     <div id='board'>
       <div id='gameItem'></div>
+      <div id='gameItemTwo'></div>
     </div>
   </body>
 </html>
