add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,7 @@
                     <li><a href="projects/runtime/">Runtime: An object dodging adventure for Halleb0t</a></li>
                     <li><a href="asd-projects/debugging-exercise"> Debugging Exercise: A debugging exercise</a></li>
                     <li><a href="asd-projects/walker">Walker: Some Boxes Walking</a></li>
+                    <li><a href="asd-projects/image-filtering">Image Filtering: Filtering Images</a></li>
                 </ul>
             </div>
         </main>
