--- a/portfolio.html
+++ b/portfolio.html
@@ -101,14 +101,20 @@
         <main>
             <div class="content">
                 <h1>Portfolio</h1>
+                <h2>Fundamental Projects</h2>
                 <ul id="portfolio">
                     <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                     <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                     <li><a href="projects/runtime/">Runtime: An object dodging adventure for Halleb0t</a></li>
+                </ul>
+                <h2>Advanced Projects</h2>
+                <ul id ="portfolio">
                     <li><a href="asd-projects/debugging-exercise"> Debugging Exercise: A debugging exercise</a></li>
                     <li><a href="asd-projects/walker">Walker: Some Boxes Walking</a></li>
                     <li><a href="asd-projects/image-filtering">Image Filtering: Filtering Images</a></li>
+                    <li><a href="asd-projects/sorting-exercise">Sorting Exercise: An exercise on sorting</a></li>
+                    <li><a href="asd-projects/pong">Pong: A game of pong</a></li>
                 </ul>
             </div>
         </main>
