--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -12,7 +12,12 @@
   
   <body>
     <div id='board'>
-      <div id='gameItem'></div>
+      <!-- Create Game Items -->
+      <div id='paddleOne'></div>
+      <div id='paddleTwo'></div>
+      <div id='ball'></div>
+      <div id='scoreOne'></div>
+      <div id='scoreTwo'></div>
     </div>
   </body>
 </html>
