--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -16,8 +16,8 @@
       <div id='paddleOne'></div>
       <div id='paddleTwo'></div>
       <div id='ball'></div>
-      <div id='scoreOne'>Score</div>
-      <div id='scoreTwo'>Score</div>
+      <div id='scoreOne'>Score: </div>
+      <div id='scoreTwo'>Score: </div>
     </div>
   </body>
 </html>
