--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -18,6 +18,7 @@
       <div id='ball'></div>
       <div id='scoreOne'>Score: </div>
       <div id='scoreTwo'>Score: </div>
+      <div id='gameOver'></div>
     </div>
   </body>
 </html>
