--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title> Amber's 0/10 Website </title>
+        <title> Amber Lien's Website </title>
         <style type="text/css">
             body {
                 background: rgb(19, 39, 62);
@@ -88,7 +88,7 @@
     <body>
       <div id="all-contents">
         <nav>
-            <h1>Amber's Deflating Ego</h1>
+            <h1>Amber Lien's Website</h1>
             <ul id="nav-ul">
                 <li class="nav-li">
                   <a class="nav-a" href="index.html">Home</a>
@@ -111,10 +111,10 @@
                 <h2>Advanced Projects</h2>
                 <ul id ="portfolio">
                     <li><a href="asd-projects/debugging-exercise"> Debugging Exercise: A debugging exercise</a></li>
-                    <li><a href="asd-projects/walker">Walker: Some Boxes Walking</a></li>
-                    <li><a href="asd-projects/image-filtering">Image Filtering: Filtering Images</a></li>
-                    <li><a href="asd-projects/sorting-exercise">Sorting Exercise: An exercise on sorting</a></li>
-                    <li><a href="asd-projects/pong">Pong: A game of pong</a></li>
+                    <li><a href="asd-projects/walker">Walker: Practicing user input by developing walking boxes</a></li>
+                    <li><a href="asd-projects/image-filtering">Image Filtering: Filtering images using loops</a></li>
+                    <li><a href="asd-projects/sorting-exercise">Sorting Exercise: An exercise on sorting algorithms</a></li>
+                    <li><a href="asd-projects/pong">Pong: A two-player game of pong</a></li>
                 </ul>
             </div>
         </main>
