--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-      <title> Amber's 0/10 Website </title>
+      <title> Amber Lien's Website </title>
       <style>
         body {
             background: rgb(19, 39, 62);
@@ -74,7 +74,7 @@
       <!--All content goes here!-->
       <div id="all-contents">
           <nav>
-              <h1>Amber's Deflating Ego</h1>
+              <h1>Amber Lien's Website</h1>
               <ul id="nav-ul">
                   <li class="nav-li">
                     <a href="index.html">Home</a>
@@ -94,14 +94,15 @@
               <!--Content section-->
               <div class="content">
                   <h2>Amber Lien</h2>
-                  <p>Still a student :(</p>
+                  <p>Hi, I'm Amber, a frehsman at MIT interested in computer science and neuroscience. I also have a strange love for ducks!</p>
                   <!--Interests section-->
                   <div id="interests">
                       <h3>Interests</h3>
                       <ul>
-                          <li>trying not to fail school</li>
-                          <li>watching vids</li>
-                          <li>hanging out with my friends :]</li>
+                          <li>Ducks!</li>
+                          <li>Watching videos</li>
+                          <li>Listening to music and podcasts</li>
+                          <li>Hanging out with my friends :]</li>
                       </ul>
                   </div>
               </div>
