--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <a href="index.html"><img class="logo" style="width:125px; height: 125px" src="img/duck_logo.svg"/></a>
             <ul id="nav-ul">
                 <li class="nav-link"><a href="portfolio.html">Portfolio</a></li>
-                <li class="nav-link"><a href="resume.html">Resume</a></li>
-                <li class="nav-link"><a href="random-thoughts.html">Random Thoughts</a></li>
-                <li class="nav-link"><a href="contact.html">Contact</a></li>
+                <li class="nav-link"><a href="pages/resume.html">Resume</a></li>
+                <li class="nav-link"><a href="pages/random-thoughts.html">Random Thoughts</a></li>
+                <li class="nav-link"><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
         <section>
