--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Amber Lien's Website </title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="shortcut icon" href="img/duck.ico">
+        <link rel="apple-touch-icon" href="img/duck.png">
+        <link rel="icon" sizes="192X192" href="img/duck.png">
     </head>
     <body>
         <nav>
