--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,1 +1,78 @@
-<p>to be added :)</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Amber Lien's Website </title>
+        <link rel="stylesheet" href="resume.css">
+        <link rel="shortcut icon" href="/img/duck.ico">
+        <link rel="apple-touch-icon" href="/img/duck.png">
+        <link rel="icon" sizes="192X192" href="/img/duck.png">
+    </head>
+    <body>
+        <nav>
+            <a href="/index.html"><img class="logo" style="width:125px; height: 125px" src="/img/duck_logo.svg"/></a>
+            <ul id="nav-ul">
+                <li class="nav-link"><a href="/portfolio.html">Portfolio</a></li>
+                <li class="nav-link"><a href="resume.html">Resume</a></li>
+                <li class="nav-link"><a href="random-thoughts.html">Random Thoughts</a></li>
+                <li class="nav-link"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <section>
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+        </section>
+        <div class="resume">
+            <h1>Amber Lien</h1>
+            <p>Contact: <a href="mailto: amberlien03@gmail.com">amberlien03@gmail.com</a></p>
+            <div class="education">
+                <h2>Education</h2>
+                <ul>Massachusetts Institute of Technology (2022-2026)
+                    <ul>BS, Electrical Engineering and Computer Science</ul>
+                    <ul>Relevant Coursework: Introduction to Computer Science Programming in Python, Calculus I, Calculus II, Physics I</ul>
+                    <ul>Activities: MITxHarvard Women in AI, SWE</ul>
+                </ul>
+                <ul>Patrick F. Taylor Science and Technology Academy (2017-2022)
+                    <ul>GPA: 4.0</ul>
+                    <ul>Activities: Secretary of National Honor Society, Treasurer of National English Honor Society</ul>
+                </ul>
+            </div>
+            <div class="work-experience">
+                <h2>Work Experience</h2>
+                <ul>Digital Humanities Lab (September 2022-Present)
+                    <ul>Front-end development on the digital archive, <a class="project-links" href="https://digitalhumanities.mit.edu/project/this-was-paris-in-1970/">“This was Paris in 1970”</a></ul>
+                    <ul>Implemented/debugged UI features to redesign the database’s interface (HTML, CSS, ReactJS)</ul>
+                    <ul>Presented my modifications to a team of developers</ul>
+                </ul>
+            </div>
+            <div class="Extracurriculars">
+                <h2>Extracurriculars</h2>
+                <ul><a class="project-links" href="https://www.harvardwecode.com/">Harvard WECode</a> (November 2022-Present)
+                    <ul>Publicized the Harvard WECode (Women Engineers Code) conference to local schools and organizations</ul>
+                </ul>
+                <ul><a class="project-links" href="/portfolio.html">Operation Spark</a> (June 2021-May 2022)
+                    <ul>Created/debugged games to understand HTML and JavaScript</ul>
+                    <ul>Created JavaScript programs and libraries to practice object-oriented programming</ul>
+                    <ul>Presented final project to an audience of experienced programmers</ul>
+                </ul>
+                <ul><a class="project-links" href="https://www.repicture.com/userprofile/amber-lien">RePicture STEM Career Accelerator Program</a> (June 2022-July 2022)
+                    <ul>Interviewed STEM professionals</ul>
+                    <ul>Conducted and presented research on current projects in robotics, chemistry, and biotechnology</ul>
+                    <ul>Received the Best Interest Project Award and Best Project Based on an Interview Award</ul>
+                </ul>
+            </div>
+            <div class="Awards">
+                <h2>Awards</h2>
+                <ul>South Central Louisiana District Rally Computer Science, 1st Place Overall</ul>
+                <ul>South Central Louisiana District Rally Calculus I, 1st Place Overall</ul>
+                <ul>National Merit Finalist</ul>
+            </div>
+            <div class="Skills">
+                <h2>Skills</h2>
+                <ul>HTML, CSS, JavaScript, ReactJS, Python, Swift</ul>
+            </div>
+        </div>
+    </body>
+</html>
+
+
