updated the random thoughts page

--- a/pages/random-thoughts.html
+++ b/pages/random-thoughts.html
@@ -1,1 +1,34 @@
-<p>to be added :)</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Amber Lien's Website </title>
+        <link rel="stylesheet" href="random-thoughts.css">
+        <link rel="shortcut icon" href="/img/duck.ico">
+        <link rel="apple-touch-icon" href="/img/duck.png">
+        <link rel="icon" sizes="192X192" href="/img/duck.png">
+    </head>
+    <body>
+        <nav>
+            <a href="/index.html"><img class="logo" style="width:125px; height: 125px" src="/img/duck_logo.svg"/></a>
+            <ul id="nav-ul">
+                <li class="nav-link"><a href="/portfolio.html">Portfolio</a></li>
+                <li class="nav-link"><a href="resume.html">Resume</a></li>
+                <li class="nav-link"><a href="random-thoughts.html">Random Thoughts</a></li>
+                <li class="nav-link"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <section>
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+        </section>
+        <header>
+            <h1>Welcome to my wall of random thoughts, comments, ideas, etc. This really is nothing more than a trip down memory lane for me.</h1>
+        </header>
+        <div class="thoughts">
+            <p>11/25/2022: I thought I had a favorite pokemon (It was <a href="https://assets.pokemon.com/assets/cms2/img/pokedex/full/258.png">mudkip</a>). I was relatively sure of this fact until I saw <a href="https://archives.bulbagarden.net/media/upload/thumb/e/ef/935Smoliv.png/1200px-935Smoliv.png">smoliv</a> and <a href="https://assets.pokemon.com/assets/cms2/img/pokedex/full/710.png">pumpkaboo</a> and <a href="https://j-img.game8.co/7453520/4d9fb611a25e99ded53784b32e334988.png/show">clodsire</a> (the picture is scuffed but glorious) and <a href="https://archives.bulbagarden.net/media/upload/thumb/e/e2/Menu_SV_Maushold-Four.png/250px-Menu_SV_Maushold-Four.png">maushold</a>! I am now at a loss.</p>
+        </div>
+    </body>
+</html>
+
+
