updated contact page temporarily

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,29 @@
-<p>to be added :)</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Amber Lien's Website </title>
+        <link rel="stylesheet" href="contact.css">
+        <link rel="shortcut icon" href="/img/duck.ico">
+        <link rel="apple-touch-icon" href="/img/duck.png">
+        <link rel="icon" sizes="192X192" href="/img/duck.png">
+    </head>
+    <body>
+        <nav>
+            <a href="/index.html"><img class="logo" style="width:125px; height: 125px" src="/img/duck_logo.svg"/></a>
+            <ul id="nav-ul">
+                <li class="nav-link"><a href="/portfolio.html">Portfolio</a></li>
+                <li class="nav-link"><a href="resume.html">Resume</a></li>
+                <li class="nav-link"><a href="random-thoughts.html">Random Thoughts</a></li>
+                <li class="nav-link"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <section>
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+        </section>
+        <h1>If you've made it here, hello! This page is currently in the process of being made. Until then, enjoy this random spot you've stumbled upon on the Internet :D</h1>
+    </body>
+</html>
+
+
