updated home page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <header class="about-me">
             <h1>Hello! I'm Amber.</h1>
-            <p class="subtitle">I'm a freshman at MIT studying electrical engineering and computer science. I'm interested in web design, robotics, and exercising creativity in the tech world!</p>
+            <p class="subtitle">I'm a sophomore at MIT studying electrical engineering and computer science. I'm interested in web design, robotics, and exercising creativity in the tech world!</p>
             <p class="subtitle">Fun fact: I love ducks, space, ducks <b>in</b> space!</p>
         </header>
     </body>
